ajout svp dans le h1

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   
     <!-- TITRE DU SITE -->
-    <h1>Choisissez vos films</h1>
+    <h1>Choisissez vos films svp</h1>
 
     <!-- MON TOP 2 -->
     <div id="selection" class="center">
